# Stock_AI_Predictor

./: .env  .gitignore  Adaptive Learning Plan.docx  Decision Matrix Table.docx  README.md  RLTradingStrategy_model-,observation_manager-,max_positions-10,enable_short-True,enable_hedging-True,position_sizing-fixed_.html  RLTradingStrategy_model-,observation_manager-,max_positions-2,enable_short-True,enable_hedging-True,position_sizing-fixed_.html  RLTradingStrategy_model-,observation_manager-,max_positions-5,enable_short-True,enable_hedging-True,position_sizing-fixed_.html  TwitterAPI_Sentiment.py  __main__.py  classifier.ipynb  cli.py  config.py  db.ipynb  debug_order_rejections.py  engine.ipynb  engine.py  engine_v2.py  functions_report.txt  gui.py  input_output.md  line_profile_results.txt  main.ipynb  packagize.py  pattern_ratio_findings_XAUUSD.json  profile.json  project_structure.text  pyproject.toml  requirements.txt  scaling.py  send_email.py  test.ipynb  test_backtrader_integration.py  test_backtrader_portfolio_integration.py  test_broker_orders.py  test_integrated_observation_system.py  test_mlflow_backtrader_integration.py  test_portfolio_evaluator.py  test_portfolio_integration.py  test_strategy_improvements.py  (+3 more)
Backtesting/: __init__.py  data_provider.py  evaluator.py  metrics.py  strategies.py
Backtrader/: PORTFOLIO_INTEGRATION_COMPLETE.md  __init__.py  analyzers.py  data_feeds.py  metrics_extractor.py  portfolio_evaluator.py  rl_strategy.py
Colab/: README.md  notebook.ipynb  parameter_tester.py  parameter_tester_multithreaded.py  pip_pattern_miner.py
(+256 files in other folders)
