[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_ai_predictor"
version = "0.1.0"
description = "AI-based stock prediction system"
authors = [
    {name = "Yoonus", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Dependencies need to be a list, not a dictionary
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "stable-baselines3",
    "gym"
]

[tool.setuptools]
packages = ["RL", "Data", "Pattern", "Utils", "Experements", "Sentiment","Backtrader"]